batch tx responses in webserver
