# chain/src/entity/tx_note_map.rs
@@ -29,7 +29,7 @@ impl TxNoteMap {
                     &(is_fee_unshielding, note_pos),
                 )| NotesMapInsertDb {
                     is_fee_unshielding,
-                    note_index: block_index.0 as i32,
+                    block_index: block_index.0 as i32,
                     note_position: note_pos as i32,
                     block_height: block_height.0 as i32,
                     masp_tx_index: masp_tx_index.0 as i32,
