# webserver/src/response/notes_map.rs
@@ -7,29 +7,32 @@ pub struct NotesMapResponse {
 
 #[derive(Clone, Debug, Deserialize, Serialize, Default)]
 pub struct Note {
-    pub index: u64,
     pub is_fee_unshielding: bool,
-    pub note_position: u64,
     pub block_height: u64,
+    pub block_index: u64,
+    pub masp_tx_index: u64,
+    pub note_position: u64,
 }
 
 impl NotesMapResponse {
-    pub fn new(notes_map: Vec<(u64, bool, u64, u64)>) -> Self {
+    pub fn new(notes_map: Vec<(bool, u64, u64, u64, u64)>) -> Self {
         Self {
             notes_map: notes_map
                 .into_iter()
                 .map(
                     |(
-                        index,
                         is_fee_unshielding,
-                        note_position,
+                        block_index,
                         block_height,
+                        masp_tx_index,
+                        note_position,
                     )| {
                         Note {
-                            index,
                             is_fee_unshielding,
-                            note_position,
+                            block_index,
                             block_height,
+                            masp_tx_index,
+                            note_position,
                         }
                     },
                 )
