# webserver/src/service/notes_map.rs
@@ -18,7 +18,7 @@ impl NotesMapService {
     pub async fn get_notes_map(
         &self,
         from_block_height: u64,
-    ) -> Vec<(u64, bool, u64, u64)> {
+    ) -> Vec<(bool, u64, u64, u64, u64)> {
         self.notes_map_repo
             .get_notes_map(from_block_height as i32)
             .await
@@ -26,10 +26,11 @@ impl NotesMapService {
             .into_iter()
             .map(|notes_map_entry| {
                 (
-                    notes_map_entry.note_index as u64,
                     notes_map_entry.is_fee_unshielding,
-                    notes_map_entry.note_position as u64,
                     notes_map_entry.block_height as u64,
+                    notes_map_entry.block_index as u64,
+                    notes_map_entry.masp_tx_index as u64,
+                    notes_map_entry.note_position as u64,
                 )
             })
             .collect()
