# webserver/src/service/tx.rs
@@ -1,3 +1,5 @@
+use itertools::Itertools;
+
 use crate::appstate::AppState;
 use crate::repository::tx::{TxRepository, TxRepositoryTrait};
 
@@ -17,15 +19,26 @@ impl TxService {
         &self,
         from_block_height: u64,
         to_block_height: u64,
-    ) -> Vec<(Vec<u8>, u64, u64)> {
+    ) -> impl IntoIterator<Item = (Vec<(u64, Vec<u8>)>, u64, u64)> {
         self.tx_repo
             .get_txs(from_block_height as i32, to_block_height as i32)
             .await
             .unwrap_or_default()
             .into_iter()
-            .map(|tx| {
-                (tx.tx_bytes, tx.note_index as u64, tx.block_height as u64)
+            // NB: the returned txs are guaranteed to be sorted
+            // by their insertion order in the database, so
+            // chunking should work as expected
+            .chunk_by(|tx| {
+                // NB: group batched txs by their slot in a block
+                (tx.block_height, tx.block_index)
             })
-            .collect()
+            .into_iter()
+            .map(|((block_height, block_index), tx_batch)| {
+                let tx_batch: Vec<_> = tx_batch
+                    .map(|tx| (tx.masp_tx_index as u64, tx.tx_bytes))
+                    .collect();
+                (tx_batch, block_height as u64, block_index as u64)
+            })
+            .collect::<Vec<_>>()
     }
 }
